--- a/mall-admin/src/main/resources/application-dev.yml
+++ b/mall-admin/src/main/resources/application-dev.yml
@@ -13,11 +13,11 @@ spring:
         login-username: druid
         login-password: druid
   redis:
-    host: localhost # Redis服务器地址
+    host: 127.0.0.1 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
-    password: # Redis服务器连接密码（默认为空）
-    timeout: 300ms # 连接超时时间（毫秒）
+    password: 123456 # Redis服务器连接密码（默认为空）
+    timeout: 1000ms # 连接超时时间（毫秒）
 
 minio:
   endpoint: http://localhost:9000 #MinIO服务所在地址
